# manabunyi

./: .gitignore  README.md  pyproject.toml
src/manabunyi/: __init__.py  __main__.py
